--- a/css/hanwha.css
+++ b/css/hanwha.css
@@ -116,6 +116,7 @@ article{
     font-size: 22px;
     color: #555;
     font-weight: 700;
+    margin-bottom: 20px;
 }
 .management .wrap .title img{
     display: block;
