--- a/css/careerssresponsive.css
+++ b/css/careerssresponsive.css
@@ -112,9 +112,18 @@
         margin-top: 200px;
     }
 
+    .middle_banner .wrap .txt_part h1{
+        font-size: 20px;
+    }
+
     .middle_banner .wrap .performance{
         position:static;
-        margin-top: 50px;
+        /* margin-top: 20px;  */
+        /* margin-top: -10px; */
+    }
+
+    .talent .wrap .boxs .box .program h1{
+
     }
     .talent{
         padding-bottom:30px;
@@ -122,11 +131,12 @@
 
     .talent .wrap .boxs .box{
         width: 100%;
-        margin-bottom: 40px;
+        margin: 0 0 40px 0;
+        /* margin-bottom: 40px; */
     }
 
     .talent .wrap .boxs .box .img{
-        width: 90%;
+        width: 100%;
         height: 160px;
         margin: 0 auto;
     }
