--- a/css/centerresponsive.css
+++ b/css/centerresponsive.css
@@ -86,19 +86,23 @@
     }
 
     /* hanwhaword */
+    .hanwhaword .wrap {
+        position: relative;
+    }
     .hanwhaword .wrap .box .txtbox .toptxt p{
         font-size: 24px;
     }
 
     .hanwhaword .wrap .box{
         width: 100%;
-        position: relative;
     }
 
     .hanwhaword .wrap .box .logo{
-        position: absolute;
-        right: 10%;
-        top: 20%;
+        width: 100%;
+        margin: 0 auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     .hanwhaword .wrap .box .logo img{
@@ -117,8 +121,16 @@
 
 
     .donation .wrap .txt_box .logo img{
-        width: 300px;
-        height: 300px;
+        width: 280px;
+        height: 280px;
+    }
+
+    .donation .wrap .txt_box .txt{}
+    .donation .wrap .txt_box .txt h2{
+        font-size: 20px;
+    }
+    .donation .wrap .txt_box .txt h1{
+        font-size: 35px;
     }
 
     /* welfare */
